<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/order"
        android:textColor="@color/white"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linear_Layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/entrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="350dp"
        android:text="@string/entrance"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="41dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/enteryouremail"
            android:paddingStart="12sp"
            android:background="@drawable/radius"
            android:backgroundTint="@color/white"
            />

    <EditText
        android:inputType="textPassword"
    android:id="@+id/enter_password"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:layout_marginVertical="10dp"
    android:paddingStart="12sp"
    android:background="@drawable/radius"
    android:backgroundTint="@color/white"
    android:hint="@string/enteryourpassword"/>



        <Button
            android:id="@+id/enter"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/gray"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="91dp"
            android:backgroundTint="@color/transparent"
            android:gravity="top"
            android:minHeight="48dp"
            android:text="@string/forgetpassword"
            android:textSize="11sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>